crates/service/tests/completion/snapshots/features__completion__cont__on_after_tag.snap
---
source: crates/service/tests/completion/cont.rs
expression: response
---
[
  {
    "label": "$on_yield",
    "labelDetails": {
      "description": "[]"
    },
    "kind": 6,
    "detail": "(block $on_yield)"
  },
  {
    "label": "1",
    "labelDetails": {
      "description": "[]"
    },
    "kind": 6,
    "detail": "(func)"
  },
  {
    "label": "switch",
    "kind": 14
  }
]
