crates/service/tests/completion/snapshots/features__completion__cont__on_after_tag_following_ident.snap
---
source: crates/service/tests/completion/cont.rs
expression: response
---
[
  {
    "label": "$on_yield",
    "labelDetails": {
      "description": "[]"
    },
    "kind": 6,
    "detail": "(block $on_yield)",
    "textEdit": {
      "range": {
        "start": {
          "line": 4,
          "character": 19
        },
        "end": {
          "line": 4,
          "character": 21
        }
      },
      "newText": "$on_yield"
    }
  },
  {
    "label": "1",
    "labelDetails": {
      "description": "[]"
    },
    "kind": 6,
    "detail": "(func)",
    "textEdit": {
      "range": {
        "start": {
          "line": 4,
          "character": 19
        },
        "end": {
          "line": 4,
          "character": 21
        }
      },
      "newText": "1"
    }
  },
  {
    "label": "switch",
    "kind": 14
  }
]
