crates/service/tests/completion/snapshots/features__completion__cont__resume_throw_after_first_following_ident.snap
---
source: crates/service/tests/completion/cont.rs
expression: response
---
[
  {
    "label": "0",
    "labelDetails": {
      "description": "[]"
    },
    "kind": 6,
    "detail": "(tag)",
    "textEdit": {
      "range": {
        "start": {
          "line": 6,
          "character": 24
        },
        "end": {
          "line": 6,
          "character": 26
        }
      },
      "newText": "0"
    }
  },
  {
    "label": "$exn",
    "labelDetails": {
      "description": "[]"
    },
    "kind": 6,
    "detail": "(tag $exn)",
    "textEdit": {
      "range": {
        "start": {
          "line": 6,
          "character": 24
        },
        "end": {
          "line": 6,
          "character": 26
        }
      },
      "newText": "$exn"
    }
  }
]
